# RMCS

./: .gitmodules
rmcs_ws/src/rmcs_bringup/config/: sin_cos_config.yaml
rmcs_ws/src/rmcs_core/: plugins.xml
rmcs_ws/src/rmcs_core/src/controller/sin_cos_module/: CMakeLists.txt  component_a.cpp  component_b.cpp  package.xml
